--- a/CRUD - todo/index.html
+++ b/CRUD - todo/index.html
@@ -14,9 +14,13 @@
             <button id="add-todo">Add</button>
         </div>
 
-        <div class="todos">
-            
-        </div>
+        <button id="filterButton">Sort A-Z</button>
+        <button id="sortButton">Incomplete Todos'</button>
+
+        <hr>
+        <div class="todos"></div>
+
+        <div class="pagination"></div>
         
     </div>
 </body>
