--- a/Q9/index.html
+++ b/Q9/index.html
@@ -8,32 +8,33 @@
 </head>
 
 <body>
-        <div class="category">
-            <div>
-                <select name="" id="">
-                    <option value="">Select</option>
-                    <option value="">Mens'</option>
-                    <option value="">Womens'</option>
-                    <option value="">Jewelerys'</option>
-                    <option value="">Electronics'</option>
-                </select>
-            </div>
 
-            <div class="">
-                <select name="" id="">
-                    <option value="">--Sort--</option>
-                    <option value="">Low to High</option>
-                    <option value="">High to Low</option>
-                    <option value="">Popularity - Asc</option>
-                    <option value="">Popularity - Desc</option>
+        <div class="navFunctionlity">
+            <div>
+                <select  id="filterByCategory">
+                    <option value="">Category</option>
+                    <option value="men's clothing">men's clothing</option>
+                    <option value="women's clothing">women's clothing</option>
+                    <option value="jewelery">jewelery</option>
+                    <option value="electronics">electronics</option>
+        
+                </select>
+            
+                <select  id="sortByPrice">
+                    <option value="">Price </option>
+                    <option value="byLow">Low to High</option>
+                    <option value="byHigh">High to Low</option>
+                    <option value="asc">Popular - Asc</option>
+                    <option value="desc">Popular - Desc</option>
                 </select>
             </div>
 
         </div>
 
+
         <hr>
 
-        <div class="displayContainer">
+        <div class="productsContainer">
 
         </div>
 </body>
