--- a/CRUD - todo/index.html
+++ b/CRUD - todo/index.html
@@ -6,9 +6,11 @@
     <title>Pagination, Filter, Sorting</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body style="background-color: #232323; color: gold;">
     <div id="container">
+
         <h2 style="text-align: center;">TODO</h2>
+        
         <div id="subPart">
             <div>
                 <input type="text" id="input">
