--- a/CRUD - todo/index.html
+++ b/CRUD - todo/index.html
@@ -6,7 +6,7 @@
     <title>Pagination, Filter, Sorting</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body style="background-color: #232323; color: gold;">
+<body>
     <div id="container">
 
         <h2 style="text-align: center;">TODO</h2>
