--- a/JSON Server/Json server - local API/index.html
+++ b/JSON Server/Json server - local API/index.html
@@ -9,6 +9,8 @@
 
 <body>
 
+        <input type="text">
+
         <div class="navFunctionlity">
             <div>
                 <select  id="filterByCategory">
