--- a/0API - CRUD/index.html
+++ b/0API - CRUD/index.html
@@ -13,6 +13,7 @@
     <div class="main">
       <div class="row">
         <h4>Manage Users</h4>
+        <div class="pagination"></div>
         <button id="load-data" class="u-full-width button button-primary">Load Data</button>
         
       </div>
